--- a/camel-example-twitter-websocket/pom.xml
+++ b/camel-example-twitter-websocket/pom.xml
@@ -75,6 +75,23 @@
       <scope>runtime</scope>
       <version>${log4j2-version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-test</artifactId>
+      <version>2.22.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.cybozu.labs/langdetect -->
+    <dependency>
+      <groupId>com.cybozu.labs</groupId>
+      <artifactId>langdetect</artifactId>
+      <version>1.1-20120112</version>
+    </dependency>
 
   </dependencies>
 
@@ -89,7 +106,11 @@
           <mainClass>org.apache.camel.example.websocket.CamelTwitterWebSocketMain</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>io.hawt</groupId>
+        <artifactId>hawtio-maven-plugin</artifactId>
+        <version>2.5.0</version>
+      </plugin>
     </plugins>
   </build>
-
 </project>
